# 42-miniRT

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  TODO
cylinder_tmp/: cylinder_intersections.c  cylinder_utils.c
inc/: data_processing.h  graphics.h  miniRT.h  operations.h  parser.h  rays.h  scene.h  window.h
lib/libft/: Makefile  libft.h
lib/libft/ft_printf/: ft_printf.c
lib/libft/gnl/: get_next_line.h  get_next_line_utils.c
libft_backup/libftminirt/: check_for_overflow.c  ft_2dstr_printf.c  ft_arr2d_free.c  ft_atof.c  ft_debug.c  ft_realloc.c  libft.h
libft_backup/libftminirt/ft_printf/: hex_conversion.c  put_variables.c
libft_backup/libftminirt/gnl/: get_next_line.c
scenes/: box.rt  christmas.rt  cones.rt  inside_cone.rt  inside_cylinder.rt  inside_sphere.rt  jp2.rt  planes_shadows.rt  planes_shadows_rot.rt
src/: cleanup.c  main.c  testfile.rt
src/data_processing/input_validation/: validate_file.c  validate_objects.c  validate_params.c  validate_settings.c  validate_utils.c
src/data_processing/parsing/: parse.c  parse_objects.c  parse_settings.c  parse_utils.c
src/data_processing/partition/: assign_cam_data.c  assign_data.c  assign_object_data.c  cam_utils.c  data_utils.c  extract_data_utils.c  get_data_structs.c  getters.c
src/graphics/: clean_mlx.c  draw.c  init.c  input.c  window_management.c
src/graphics/mlx_manage/: clean_mlx.c  close_mlx.c  input.c  run_mlx.c
src/graphics/render/: canvas.c  draw.c  generate_bitmap.c
src/graphics/rendering/: draw.c  generate_bitmap.c
src/graphics/texture_handler/: apply_texture.c  texture_mapping.c
src/operations/: matrix_operations.c  matrix_operations_1.c  matrix_operations_2.c  matrix_utils.c  operation_utils.c  transfomations.c  tuple_operations_1.c  tuple_operations_2.c
src/operations/matrices/: matrix_inversion.c  matrix_ops.c  matrix_utils.c
src/operations/transformations/: rotation.c  transform.c
src/operations/tuples/: tuple_ops_1.c  tuple_ops_2.c
src/parse/: free_objects.c  parse.c  parse_objects.c  parse_settings.c  parse_utils.c  validate_file.c  validate_objects.c  validate_params.c  validate_settings.c  validate_utils.c
src/parse/testfiles/: inv_field_camera.rt  inv_range_diam.rt  missing_color.rt  missing_plane_cords.rt  nls_between.rt
src/parsing/input_validation/: validate_file.c  validate_objects.c  validate_params.c  validate_settings.c  validate_utils.c
src/parsing/loading_data/: free_objects.c  parse.c  parse_objects.c  parse_settings.c  parse_utils.c  partition.c
src/rays/: casting_rays.c  cylinder_cleanup.c  cylinder_intersection_inits.c  cylinder_intersections.c  cylinder_utils.c  generate_bitmap.c  hit_point.c  intersections.c  position.c  rays.c  sort_intersections.c  space_conversion.c  utils.c
src/rays/intersections/: find_intersections.c  intersect_cylinder.c  intersect_objects.c  sort_intersections.c  track_intersections.c  truncate_and_close.c
src/rays/light/: color_conversion.c  light.c
src/rays/light/phong_model/: phong.c  phong_getters.c  reflections.c
src/rays/lighting/: apply_lighting.c  get_color.c  light_utils.c  patterns.c  phong_attributes.c  phong_model.c  shadows.c
src/rays/shadows/: shadows.c
src/scene/: generate_bitmap.c  normal_vectors.c  perspective_projection.c  prepare_world.c  scene.c  utils.c
src/window/: window_management.c
tests/integration_tests/: CMakeLists.txt  file_validation.cpp  parsing_tests.cpp
tests/integration_tests/testfiles/: box.rt  cylindron.rt  extra_char_light.rt  extra_nls.rt  extra_params_cylinder.rt  inv_vec.rt  inv_vector_light.rt  kulga.rt  missing_field.rt  missing_id.rt  multip_spaces.rt  multiple_objects.rt  nls_between.rt  room.rt  stoch.rt  valid.rt  valid_nocy.rt  wazonig.rt
tests/unit_tests/: CMakeLists.txt  check_cords.cpp  validate_ambient.cpp  validate_camera.cpp  validate_colors.cpp
textures/: skyscraper.xpm
unit_tests/: CMakeLists.txt  check_vector.cpp  validate_extension.cpp  validate_file.cpp  validate_light.cpp
